--- a/mf_web/volumes/htdocs/sass/elements/std-inline-list.size_m.scss
+++ b/mf_web/volumes/htdocs/sass/elements/std-inline-list.size_m.scss
@@ -1,5 +1,10 @@
 .std-inline-list {
-    list-style-type: "-";
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+
+    .item:not(:first-child) {
+        padding-left: 16px;
+        list-style-type: "-";
+    }
 }
